feat: new DataUniverse hero design + i18n + clear .next cache fix
- Add DataUniverseHero, DataChronicleHero, ZenDataHero designs
- Add SectionDivider component
- Add SpaceBackground, CyberpunkBackground Three.js scenes
- Add i18n translation files (fr, en, es, de, it, nl, pl, pt)
- Update page.tsx to use DataUniverseHero
- Update data.ts, layout, footer, header
- Refactor globals.css, frise, projets, competences, contact pages
- Clear .next cache to fix stale compilation errors

--- a/src/lib/i18n/translations/de.json
+++ b/src/lib/i18n/translations/de.json
@@ -7,6 +7,20 @@
     "contact": "Kontakt",
     "skipToContent": "Zum Hauptinhalt springen"
   },
+  "hero": {
+    "tagline": "Ich verwandle {data} in Entscheidungen und {code} in Wirkung.",
+    "education": "M1 Data Engineering & KI @ EFREI Paris",
+    "status": "VERFÜGBAR",
+    "metrics": {
+      "projects": "GitHub-Projekte",
+      "commits": "Commits",
+      "experience": "Jahre Erfahrung",
+      "technologies": "Technologien"
+    },
+    "cta": "Projekte ansehen",
+    "ctaSecondary": "Kontaktieren",
+    "scroll": "SCROLLEN"
+  },
   "home": {
     "title": "Data Engineer & Fullstack Developer",
     "subtitle": "Aufbau von Datensystemen, die Entscheidungen vorantreiben.",
