feat: Netflix redesign, Google Search Console verification, dependency updates
- Full Netflix-inspired dark theme (red/black/white palette)
- All sections visible immediately (no fragile anime.js opacity:0)
- Hero billboard with photo background and gradient overlays
- Horizontal scroll project cards, dark header/footer
- Added Google Search Console verification file
- Updated dependencies and data dates for 2026

Co-Authored-By: GitHub Copilot <noreply@github.com>

--- a/src/lib/i18n/translations/de.json
+++ b/src/lib/i18n/translations/de.json
@@ -56,9 +56,30 @@
     "projectCountPlural": "{count} Projekte"
   },
   "projects": {
-    "caption": "Portfolio",
-    "title": "Projekte",
-    "description": "Eine Auswahl meiner bedeutendsten Projekte.",
+    "caption": "// GitHub-Portfolio",
+    "titleLine1": "Meine",
+    "titleLine2": "Projekte",
+    "description": "{count} öffentliche Projekte rund um KI, Machine Learning, Fullstack und mehr. Echtzeitdaten von GitHub.",
+    "repos": "Repos",
+    "commits": "Commits",
+    "viewOnGithub": "Auf GitHub ansehen",
+    "search": "Projekt suchen...",
+    "all": "Alle",
+    "projects": "Projekte",
+    "found": "Projekt(e) gefunden",
+    "noResults": "Keine Projekte gefunden",
+    "tryAnother": "Versuchen Sie einen anderen Suchbegriff",
+    "code": "Code",
+    "demo": "Demo",
+    "zip": "ZIP",
+    "cta": {
+      "caption": "Zusammenarbeit",
+      "title": "Lust auf {accent}?",
+      "accent": "Zusammenarbeit",
+      "description": "Ich bin immer offen für Möglichkeiten — Praktika, Werkstudentenstellen, Open-Source-Projekte oder fachlichen Austausch.",
+      "contact": "Kontaktieren",
+      "github": "GitHub-Profil"
+    },
     "viewProject": "Projekt ansehen",
     "viewCode": "Code ansehen",
     "featured": "Empfohlen"
@@ -105,6 +126,7 @@
       "title": "Kontaktformular",
       "name": "Name",
       "email": "E-Mail",
+      "subject": "Betreff",
       "message": "Nachricht",
       "send": "Senden",
       "sending": "Wird gesendet...",
