--- a/src/lib/i18n/translations/en.json
+++ b/src/lib/i18n/translations/en.json
@@ -56,9 +56,30 @@
     "projectCountPlural": "{count} projects"
   },
   "projects": {
-    "caption": "Portfolio",
-    "title": "Projects",
-    "description": "A selection of my most significant projects.",
+    "caption": "// GitHub Portfolio",
+    "titleLine1": "My",
+    "titleLine2": "Projects",
+    "description": "{count} public projects covering AI, Machine Learning, Fullstack, and more. Real-time data from GitHub.",
+    "repos": "repos",
+    "commits": "commits",
+    "viewOnGithub": "View on GitHub",
+    "search": "Search a project...",
+    "all": "All",
+    "projects": "projects",
+    "found": "project(s) found",
+    "noResults": "No projects found",
+    "tryAnother": "Try another search term",
+    "code": "Code",
+    "demo": "Demo",
+    "zip": "ZIP",
+    "cta": {
+      "caption": "Collaboration",
+      "title": "Want to {accent}?",
+      "accent": "collaborate",
+      "description": "I'm always open to opportunities — internships, work-study, open-source projects, or technical discussions.",
+      "contact": "Contact me",
+      "github": "GitHub Profile"
+    },
     "viewProject": "View project",
     "viewCode": "View code",
     "featured": "Featured"
@@ -105,6 +126,7 @@
       "title": "Contact form",
       "name": "Name",
       "email": "Email",
+      "subject": "Subject",
       "message": "Message",
       "send": "Send",
       "sending": "Sending...",
