--- a/src/lib/i18n/translations/es.json
+++ b/src/lib/i18n/translations/es.json
@@ -56,9 +56,30 @@
     "projectCountPlural": "{count} proyectos"
   },
   "projects": {
-    "caption": "Portfolio",
-    "title": "Proyectos",
-    "description": "Una selección de mis proyectos más significativos.",
+    "caption": "// Portfolio GitHub",
+    "titleLine1": "Mis",
+    "titleLine2": "Proyectos",
+    "description": "{count} proyectos públicos que abarcan IA, Machine Learning, Fullstack y más. Datos en tiempo real desde GitHub.",
+    "repos": "repos",
+    "commits": "commits",
+    "viewOnGithub": "Ver en GitHub",
+    "search": "Buscar un proyecto...",
+    "all": "Todos",
+    "projects": "proyectos",
+    "found": "proyecto(s) encontrado(s)",
+    "noResults": "No se encontraron proyectos",
+    "tryAnother": "Prueba con otro término de búsqueda",
+    "code": "Código",
+    "demo": "Demo",
+    "zip": "ZIP",
+    "cta": {
+      "caption": "Colaboración",
+      "title": "¿Quieres {accent}?",
+      "accent": "colaborar",
+      "description": "Siempre estoy abierto a oportunidades — prácticas, alternancia, proyectos open-source o intercambios técnicos.",
+      "contact": "Contactar",
+      "github": "Perfil GitHub"
+    },
     "viewProject": "Ver proyecto",
     "viewCode": "Ver código",
     "featured": "Destacado"
@@ -105,6 +126,7 @@
       "title": "Formulario de contacto",
       "name": "Nombre",
       "email": "Email",
+      "subject": "Asunto",
       "message": "Mensaje",
       "send": "Enviar",
       "sending": "Enviando...",
