--- a/src/lib/i18n/translations/fr.json
+++ b/src/lib/i18n/translations/fr.json
@@ -56,9 +56,30 @@
     "projectCountPlural": "{count} projets"
   },
   "projects": {
-    "caption": "Portfolio",
-    "title": "Projets",
-    "description": "Une sélection de mes projets les plus significatifs.",
+    "caption": "// Portfolio GitHub",
+    "titleLine1": "Mes",
+    "titleLine2": "Projets",
+    "description": "{count} projets publics couvrant l'IA, le Machine Learning, le Fullstack, et bien plus. Données en temps réel depuis GitHub.",
+    "repos": "repos",
+    "commits": "commits",
+    "viewOnGithub": "Voir sur GitHub",
+    "search": "Rechercher un projet...",
+    "all": "Tous",
+    "projects": "projets",
+    "found": "projet(s) trouvé(s)",
+    "noResults": "Aucun projet trouvé",
+    "tryAnother": "Essayez un autre terme de recherche",
+    "code": "Code",
+    "demo": "Demo",
+    "zip": "ZIP",
+    "cta": {
+      "caption": "Collaboration",
+      "title": "Envie de {accent} ?",
+      "accent": "collaborer",
+      "description": "Je suis toujours ouvert aux opportunités — stages, alternances, projets open-source, ou échanges techniques.",
+      "contact": "Me contacter",
+      "github": "Profil GitHub"
+    },
     "viewProject": "Voir le projet",
     "viewCode": "Voir le code",
     "featured": "À la une"
@@ -105,6 +126,7 @@
       "title": "Formulaire de contact",
       "name": "Nom",
       "email": "Email",
+      "subject": "Sujet",
       "message": "Message",
       "send": "Envoyer",
       "sending": "Envoi en cours...",
