--- a/src/lib/i18n/translations/it.json
+++ b/src/lib/i18n/translations/it.json
@@ -56,9 +56,30 @@
     "projectCountPlural": "{count} progetti"
   },
   "projects": {
-    "caption": "Portfolio",
-    "title": "Progetti",
-    "description": "Una selezione dei miei progetti più significativi.",
+    "caption": "// Portfolio GitHub",
+    "titleLine1": "I miei",
+    "titleLine2": "Progetti",
+    "description": "{count} progetti pubblici su IA, Machine Learning, Fullstack e altro. Dati in tempo reale da GitHub.",
+    "repos": "repo",
+    "commits": "commit",
+    "viewOnGithub": "Vedi su GitHub",
+    "search": "Cerca un progetto...",
+    "all": "Tutti",
+    "projects": "progetti",
+    "found": "progetto/i trovato/i",
+    "noResults": "Nessun progetto trovato",
+    "tryAnother": "Prova con un altro termine di ricerca",
+    "code": "Codice",
+    "demo": "Demo",
+    "zip": "ZIP",
+    "cta": {
+      "caption": "Collaborazione",
+      "title": "Vuoi {accent}?",
+      "accent": "collaborare",
+      "description": "Sono sempre aperto a opportunità — stage, alternanza, progetti open-source o scambi tecnici.",
+      "contact": "Contattami",
+      "github": "Profilo GitHub"
+    },
     "viewProject": "Vedi progetto",
     "viewCode": "Vedi codice",
     "featured": "In evidenza"
@@ -105,6 +126,7 @@
       "title": "Modulo di contatto",
       "name": "Nome",
       "email": "Email",
+      "subject": "Oggetto",
       "message": "Messaggio",
       "send": "Invia",
       "sending": "Invio in corso...",
