--- a/src/lib/i18n/translations/nl.json
+++ b/src/lib/i18n/translations/nl.json
@@ -56,9 +56,30 @@
     "projectCountPlural": "{count} projecten"
   },
   "projects": {
-    "caption": "Portfolio",
-    "title": "Projecten",
-    "description": "Een selectie van mijn belangrijkste projecten.",
+    "caption": "// GitHub Portfolio",
+    "titleLine1": "Mijn",
+    "titleLine2": "Projecten",
+    "description": "{count} openbare projecten over AI, Machine Learning, Fullstack en meer. Realtime data van GitHub.",
+    "repos": "repos",
+    "commits": "commits",
+    "viewOnGithub": "Bekijk op GitHub",
+    "search": "Zoek een project...",
+    "all": "Alle",
+    "projects": "projecten",
+    "found": "project(en) gevonden",
+    "noResults": "Geen projecten gevonden",
+    "tryAnother": "Probeer een andere zoekterm",
+    "code": "Code",
+    "demo": "Demo",
+    "zip": "ZIP",
+    "cta": {
+      "caption": "Samenwerking",
+      "title": "Wil je {accent}?",
+      "accent": "samenwerken",
+      "description": "Ik sta altijd open voor kansen — stages, werkstudentschap, open-source projecten of technische uitwisseling.",
+      "contact": "Contact",
+      "github": "GitHub Profiel"
+    },
     "viewProject": "Bekijk project",
     "viewCode": "Bekijk code",
     "featured": "Uitgelicht"
@@ -105,6 +126,7 @@
       "title": "Contactformulier",
       "name": "Naam",
       "email": "Email",
+      "subject": "Onderwerp",
       "message": "Bericht",
       "send": "Verzenden",
       "sending": "Verzenden...",
