--- a/src/lib/i18n/translations/pl.json
+++ b/src/lib/i18n/translations/pl.json
@@ -56,9 +56,30 @@
     "projectCountPlural": "{count} projektów"
   },
   "projects": {
-    "caption": "Portfolio",
-    "title": "Projekty",
-    "description": "Wybór moich najważniejszych projektów.",
+    "caption": "// Portfolio GitHub",
+    "titleLine1": "Moje",
+    "titleLine2": "Projekty",
+    "description": "{count} publicznych projektów obejmujących AI, Machine Learning, Fullstack i więcej. Dane w czasie rzeczywistym z GitHub.",
+    "repos": "repozytoria",
+    "commits": "commity",
+    "viewOnGithub": "Zobacz na GitHub",
+    "search": "Szukaj projektu...",
+    "all": "Wszystkie",
+    "projects": "projekty",
+    "found": "projekt(ów) znaleziono",
+    "noResults": "Nie znaleziono projektów",
+    "tryAnother": "Spróbuj innego terminu wyszukiwania",
+    "code": "Kod",
+    "demo": "Demo",
+    "zip": "ZIP",
+    "cta": {
+      "caption": "Współpraca",
+      "title": "Chcesz {accent}?",
+      "accent": "współpracować",
+      "description": "Zawsze jestem otwarty na możliwości — staże, projekty open-source lub wymianę techniczną.",
+      "contact": "Kontakt",
+      "github": "Profil GitHub"
+    },
     "viewProject": "Zobacz projekt",
     "viewCode": "Zobacz kod",
     "featured": "Wyróżnione"
@@ -105,6 +126,7 @@
       "title": "Formularz kontaktowy",
       "name": "Imię",
       "email": "Email",
+      "subject": "Temat",
       "message": "Wiadomość",
       "send": "Wyślij",
       "sending": "Wysyłanie...",
