--- a/src/lib/i18n/translations/pt.json
+++ b/src/lib/i18n/translations/pt.json
@@ -56,9 +56,30 @@
     "projectCountPlural": "{count} projetos"
   },
   "projects": {
-    "caption": "Portfólio",
-    "title": "Projetos",
-    "description": "Uma seleção dos meus projetos mais significativos.",
+    "caption": "// Portfólio GitHub",
+    "titleLine1": "Meus",
+    "titleLine2": "Projetos",
+    "description": "{count} projetos públicos abrangendo IA, Machine Learning, Fullstack e mais. Dados em tempo real do GitHub.",
+    "repos": "repos",
+    "commits": "commits",
+    "viewOnGithub": "Ver no GitHub",
+    "search": "Pesquisar um projeto...",
+    "all": "Todos",
+    "projects": "projetos",
+    "found": "projeto(s) encontrado(s)",
+    "noResults": "Nenhum projeto encontrado",
+    "tryAnother": "Tente outro termo de pesquisa",
+    "code": "Código",
+    "demo": "Demo",
+    "zip": "ZIP",
+    "cta": {
+      "caption": "Colaboração",
+      "title": "Quer {accent}?",
+      "accent": "colaborar",
+      "description": "Estou sempre aberto a oportunidades — estágios, alternância, projetos open-source ou trocas técnicas.",
+      "contact": "Contato",
+      "github": "Perfil GitHub"
+    },
     "viewProject": "Ver projeto",
     "viewCode": "Ver código",
     "featured": "Destaque"
@@ -105,6 +126,7 @@
       "title": "Formulário de contato",
       "name": "Nome",
       "email": "Email",
+      "subject": "Assunto",
       "message": "Mensagem",
       "send": "Enviar",
       "sending": "Enviando...",
